# raincoat-takehome-science

./: .gitignore  README.md  config.yml  mypy.ini  pytest.ini  setup.cfg
.github/workflows/: ci_job.yml
notebooks/: windfield.ipynb
src/raincoat_takehome_science/: __init__.py  cli.py  data.py  path.py  plot.py  utils.py
src/raincoat_takehome_science/notebooks/: windfield-tmpl.ipynb
src/raincoat_takehome_science/tests/: conftest.py  test_functional.py
